<resources>
    <string name="app_name">Socity app(pankaj)</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="menu">Menu</string>
    <string name="ongoing_order">Ongoing Order</string>
    <string name="history">History</string>
    <string name="term_and_condition">Term and Condition</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact us</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="home">Home</string>
    <string name="hello_user">Hello User</string>
    <string name="pankaj">Pankaj</string>
    <string name="my_socity">My Socity</string>
    <string name="notice_board">Notice Board</string>
    <string name="maintaincce">Maintaincce</string>
    <string name="payment">Payment</string>
    <string name="help">Help</string>
    <string name="visitor">Visitor</string>
    <string name="anouncement">Anouncement</string>
    <string name="event">Event</string>
    <string name="socity_area">Socity Area</string>
    <string name="ambulance">Ambulance</string>
    <string name="police">Police</string>
    <string name="fire_brigade">Fire Brigade</string>
    <string name="secratory">Secratory</string>
    <string name="watch_man">Watch Man</string>
    <string name="_112">112</string>
    <string name="_108">108</string>
    <string name="_999">999</string>
    <string name="_999999999">999999999</string>
    <string name="society_is_an_innovative_android_application_crafted_to_transform_the_way_communities_interact_manage_and_thrive_together_designed_with_both_functionality_and_ease_of_use_in_mind_society_addresses_the_unique_needs_of_residential_communities_housing_societies_and_neighborhood_groups_the_app_acts_as_a_centralized_hub_allowing_members_to_effortlessly_communicate_organize_events_share_important_updates_and_resolve_communal_issues_in_real_time_from_scheduling_meetings_and_managing_facilities_to_creating_discussion_forums_and_sending_emergency_alerts_society_offers_a_comprehensive_suite_of_features_that_promote_a_connected_and_cohesive_environment_its_intuitive_design_ensures_that_users_of_all_ages_can_navigate_the_platform_with_ease_while_robust_security_measures_protect_personal_information_and_ensure_privacy_society_goes_beyond_just_communication_it_fosters_a_sense_of_belonging_and_participation_encouraging_members_to_take_an_active_role_in_their_community_whether_it_s_coordinating_a_neighborhood_watch_planning_a_community_festival_or_simply_staying_informed_about_local_happenings_society_empowers_communities_to_work_together_more_effectively_and_live_in_harmony_with_society_every_member_has_a_voice_and_every_community_can_reach_its_full_potential">Society is an innovative Android application crafted to transform the way communities interact, manage, and thrive together. Designed with both functionality and ease of use in mind, Society addresses the unique needs of residential communities, housing societies, and neighborhood groups. The app acts as a centralized hub, allowing members to effortlessly communicate, organize events, share important updates, and resolve communal issues in real-time. From scheduling meetings and managing facilities to creating discussion forums and sending emergency alerts, Society offers a comprehensive suite of features that promote a connected and cohesive environment. Its intuitive design ensures that users of all ages can navigate the platform with ease, while robust security measures protect personal information and ensure privacy. Society goes beyond just communication; it fosters a sense of belonging and participation, encouraging members to take an active role in their community. Whether it\'s coordinating a neighborhood watch, planning a community festival, or simply staying informed about local happenings, Society empowers communities to work together more effectively and live in harmony. With Society, every member has a voice, and every community can reach its full potential.</string>
    <string name="visit_over_socity_website"><a href="https://maps.app.goo.gl/N2QovW6bEYtB6p7r6">Visit Over Socity website</a></string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="notice_title">Notice Title</string>
    <string name="notice_content">Notice Content</string>
    <string name="add_item">Add Item</string>
    <string name="enter_notice_content">Enter notice content</string>
    <string name="generate_notification">Generate Notification</string>
    <string name="emergency">Emergency</string>
    <string name="note_only_press_the_alarm_on_emergency_like_earthquake_fire_etc">Note:- Only press the alarm on Emergency like EarthQuake , Fire etc</string>
    <string name="enter_your_data">Enter your data</string>
    <string name="submit">Submit</string>
    <string name="your_entered_data_will_appear_here">Your entered data will appear here</string>
    <string name="enter_visitor_name">Enter Visitor Name</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="visiting_work">Visiting Work</string>
    <string name="your_entered_phone_number">Your Entered Phone Number</string>
    <string name="your_entered_visiter_detail">Your Entered Visiter Detail</string>
    <string name="add_event">Add Event</string>
    <string name="event_description">Event Description</string>
    <string name="event_date">Event Date</string>
    <string name="event_title">Event Title</string>
</resources>