<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient"
    android:padding="16dp"
    tools:context=".MainVisitor">


    <EditText
        android:id="@+id/etInputData"
        android:layout_width="332dp"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.7"
        android:autofillHints="Entre Visitor Detial"
        android:background="#CCC9C9"
        android:hint="@string/enter_visitor_name"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="16dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/contactNumber"
        android:layout_width="332dp"
        android:layout_height="81dp"
        android:layout_below="@+id/etInputData"
        android:layout_alignStart="@+id/etInputData"
        android:layout_alignEnd="@+id/etInputData"
        android:alpha="0.7"
        android:autofillHints="Entre Detial"
        android:background="#CCC9C9"
        android:hint="@string/enter_contact_number"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="16dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/visitingWork"
        android:layout_width="332dp"
        android:layout_height="81dp"
        android:layout_below="@+id/contactNumber"
        android:layout_alignStart="@+id/contactNumber"
        android:layout_alignEnd="@+id/contactNumber"
        android:layout_marginTop="20dp"
        android:alpha="0.7"
        android:autofillHints="Entre Detial"
        android:background="#CCC9C9"
        android:hint="@string/visiting_work"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="16dp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_below="@+id/visitingWork"
        android:layout_alignStart="@+id/visitingWork"
        android:layout_alignEnd="@+id/visitingWork"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="67dp"
        android:background="@drawable/gradient"
        android:padding="10dp"
        android:shadowRadius="20"
        android:text="@string/submit"
        android:textColor="@color/white" />

</RelativeLayout>