<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DisplayActivity">


    <TextView
        android:id="@+id/tvDisplayData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="31dp"
        android:background="@color/white"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/your_entered_data_will_appear_here"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/phnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDisplayData"
        android:layout_alignStart="@+id/tvDisplayData"
        android:layout_alignEnd="@+id/tvDisplayData"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/your_entered_phone_number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/Vdetial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phnumber"
        android:layout_alignStart="@+id/phnumber"
        android:layout_alignEnd="@+id/phnumber"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/your_entered_visiter_detail"
        android:textSize="18sp" />


</RelativeLayout>