<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Emergency">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:overScrollMode="always"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:scrollbars="vertical"
                app:columnCount="1"
                app:rowCount="8">

                <androidx.cardview.widget.CardView
                    android:id="@+id/ambulance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="12dp"
                    android:paddingVertical="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="0"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ambulance"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ambulance"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="phone"
                            android:linksClickable="true"
                            android:text="@string/_112"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/police"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/police_man"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/police"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="phone"
                            android:linksClickable="true"
                            android:text="@string/_108"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/fire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="3"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/fire_brigade"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fire_brigade"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="phone"
                            android:linksClickable="true"
                            android:text="@string/_999"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/secratory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="4"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/owner"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/secratory"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="phone"
                            android:linksClickable="true"
                            android:text="@string/_999999999"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/watchman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="5"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/watchman"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/watch_man"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="phone"
                            android:linksClickable="true"
                            android:text="@string/_999999999"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </androidx.gridlayout.widget.GridLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>